@@ -1,3 +1,4 @@
+	* try harder to bind TCP and UDP sockets to the same port
 	* made disk_interface's status_t type a flags type
 	* optimize resume data format to use less space
 	* add a simpler overload to bencode() returning a vector<char>
